tests/js_error/source_locations/expression/array/spread_get_iterator.js
var iterable = {
  [Symbol.iterator]() {
    throw new Error();
  }
};

[...iterable];